[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "litepolis-middleware-template"
version = "0.0.1"
authors = [
    { name = "Your name" },
]
description = "The middleware module for LitePolis"
dependencies = [
    "litepolis",
    "litepolis-database-example",
]

[project.license]
text = "file: LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/NewJerseyStyle/LitePolis-middleware-template"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]
namespaces = false
